--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,92 @@
 ---
-const today = new Date();
----
 
-<footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
-</footer>
-<style>
-	footer {
-		padding: 25px;
-		text-align: center;
-	}
-</style>
+---
+<footer class="footer pt-5">
+	<div class="container px-3">
+	   <div class="row">
+		 <!-- Footer Column 1 Start -->
+		  <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-5">
+			 <div class="footer-col mt-5 pe-0 pe-lg-3 pe-xl-5 w-small">
+				<img class="footer-logo" src="/assets/images/logo.svg">
+				<p class="mt-4 pt-2 mb-0">
+				   We deliver cutting-edge web development, SEO, and logo design services tailored specifically for professional services. Our unique approach? We come on as a strategic partner, helping you to achieve your most ambitious business goals through digital marketing.
+					</p>
+				<ul class="footer-social list-unstyled mt-4 mb-0 d-flex">
+				   <li class="me-3"><a href="#" class=""><img src="/assets/images/twitter.svg"></a></li>
+				   <li class="me-3"><a href="#" class=""><img src="/assets/images/youtube.svg"></a></li>
+				   <li class="me-3"><a href="#" class=""><img src="/assets/images/slack.svg"></a></li>
+				   <li class="me-3"><a href="#" class=""><img src="/assets/images/instagram.svg"></a></li>
+				   <li class="me-3"><a href="#" class=""><img src="/assets/images/linkedin.svg"></a></li>
+				</ul>
+			 </div>
+		  </div>
+		  <!-- Footer Column 1 End -->
+		  <!-- Footer Column 2 Start -->
+		  <div class="col-6 col-sm-3 col-md-3 col-lg-2 col-xl-2">
+			 <div class="footer-col mt-5">
+				<h3 class="footer-title">Company</h3>
+				<ul class="list-unstyled footer-links mt-4 pt-2">
+				   <li><a href="#">About</a></li>
+				   <li><a href="#">Team</a></li>
+				   <li><a href="#">Company</a></li>
+				   <li><a href="#">Legal</a></li>
+				   <li><a href="#">Support</a></li>
+				   <li><a href="#">Contact</a></li>
+				</ul>
+			 </div>
+		  </div>
+		  <!-- Footer Column 2 End -->
+		  <!-- Footer Column 3 Start -->
+		  <!-- <div class="col-6 col-sm-3 col-md-3 col-lg-2 col-xl-2">
+			 <div class="footer-col mt-5">
+				<h3 class="footer-title">Product</h3>
+				<ul class="list-unstyled footer-links mt-4 pt-2">
+				   <li><a href="#">Individual</a></li>
+				   <li><a href="#">Business</a></li>
+				   <li><a href="#">Non Profit</a></li>
+				   <li><a href="#">Student</a></li>
+				</ul>
+			 </div>
+		  </div> -->
+		  <!-- Footer Column 3 End -->
+		  <!-- Footer Column 4 Start -->
+		  <!-- <div class="col-6 col-sm-3 col-md-3 col-lg-2 col-xl-2">
+			 <div class="footer-col mt-5">
+				<h3 class="footer-title">Services</h3>
+				<ul class="list-unstyled footer-links mt-4 pt-2">
+				   <li><a href="#">Branding</a></li>
+				   <li><a href="#">Design</a></li>
+				   <li><a href="#">Data Research</a></li>
+				   <li><a href="#">App Dev</a></li>
+				   <li><a href="#">CRMs</a></li>
+				</ul>
+			 </div>
+		  </div> -->
+		  <!-- Footer Column 4 End -->
+		  <!-- Footer Column 5 Start -->
+		  <!-- <div class="col-6 col-sm-3 col-md-3 col-lg-2 col-xl-1">
+			 <div class="footer-col mt-5">
+				<h3 class="footer-title">Solutions</h3>
+				<ul class="list-unstyled footer-links mt-4 pt-2">
+				   <li><a href="#">Student</a></li>
+				   <li><a href="#">Freelancer</a></li>
+				   <li><a href="#">Agency</a></li>
+				   <li><a href="#">Business</a></li>
+				   <li><a href="#">Education</a></li>
+				</ul>
+			 </div>
+		  </div> -->
+		  <!-- Footer Column 5 End -->
+	   </div>
+	   <div class="row mt-5 footer-credits">
+		  <div class="col-6 py-3 py-lg-4">
+			 <p class="mb-0 small">© 2023 <a href="#" class="text-reset fw-bold">Tecplus</a></p>
+		  </div>
+		  <div class="col-6 py-3 py-lg-4">
+			 <p class="mb-0 small d-flex justify-content-end">
+				Designed by <a href="https://www.tecplus.io" class="text-reset fw-bold">&nbsp;Tecplus</a>
+			 </p>
+		  </div>
+	   </div>
+	</div>
+ </footer>
