--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,4 @@
----
 
----
 
 <header class="bg-white">
 	<nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
@@ -21,7 +19,7 @@
 	  <div x-data="{ open: false }" class="hidden lg:flex lg:gap-x-12">
 		<div class="relative">
 		  <button @click="open = !open" type="button" class="flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900" aria-expanded="false">
-			Product
+			Services
 			<svg class="h-5 w-5 flex-none text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 			  <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
 			</svg>
@@ -47,11 +45,11 @@
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="#" class="block font-semibold text-gray-900">
-					Analytics
+				  <a href="/services/product-design" class="block font-semibold text-gray-900">
+					Product Design & Engineering
 					<span class="absolute inset-0"></span>
 				  </a>
-				  <p class="mt-1 text-gray-600">Get a better understanding of your traffic</p>
+				  <p class="mt-1 text-gray-600">We collaborate to bring change</p>
 				</div>
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
@@ -62,7 +60,7 @@
 				</div>
 				<div class="flex-auto">
 				  <a href="#" class="block font-semibold text-gray-900">
-					Engagement
+					UX/UI Design
 					<span class="absolute inset-0"></span>
 				  </a>
 				  <p class="mt-1 text-gray-600">Speak directly to your customers</p>
@@ -79,7 +77,7 @@
 					Security
 					<span class="absolute inset-0"></span>
 				  </a>
-				  <p class="mt-1 text-gray-600">Your customers’ data will be safe and secure</p>
+				  <p class="mt-1 text-gray-600">Protect Your customers data</p>
 				</div>
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
@@ -90,10 +88,10 @@
 				</div>
 				<div class="flex-auto">
 				  <a href="#" class="block font-semibold text-gray-900">
-					Integrations
+					Staffing
 					<span class="absolute inset-0"></span>
 				  </a>
-				  <p class="mt-1 text-gray-600">Connect with third-party tools</p>
+				  <p class="mt-1 text-gray-600">We connect you with trained experts</p>
 				</div>
 			  </div>
 			  <div class="group relative flex gap-x-6 rounded-lg p-4 text-sm leading-6 hover:bg-gray-50">
@@ -240,4 +238,6 @@
 	  </div>
 	</div>
   </header>
+  
+
   
