New comp added from shortcut

--- a/src/components/Logos.astro
+++ b/src/components/Logos.astro
@@ -10,7 +10,7 @@ const logos = [
 ]
 ---
 
-<section class="brand-logos  section position-relative mx-auto pb-3 pb-lg-5">
+<section class="brand-logos  section position-relative mx-auto ">
     <div class="  px-3">
        <div class="row">
           <div class="col">
@@ -18,12 +18,7 @@ const logos = [
                 <span class="pre-title small fw-bold text-uppercase">Clients</span>
                 <h3 class="brand-logos-title text-center  w-full h3 fw-bold mt-2">Proudly Serving Professionals Across Diverse Industries Since 2006</h3>
                 <div class=" justify-center w-full flex mt-4 pt-4">
-                    {logos.map((l, i) => {
-                        return (
-                            <img class="w-24 h-auto" src={l.src} alt={l.alt} />
-                        )
-
-                    } )}
+                
                 </div>
              </div>
           </div>
