--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 
 
-<header class="bg-white">
+<header class="bg-transparent">
 	<nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
 	  <div class="flex lg:flex-1">
 		<a href="/" class="-m-1.5 p-1.5">
@@ -45,7 +45,7 @@
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="/services/product-design" class="block font-semibold text-gray-900">
+				  <a href="/product-design" class="block font-semibold text-gray-900">
 					Product Design & Engineering
 					<span class="absolute inset-0"></span>
 				  </a>
@@ -126,7 +126,7 @@
 		  </div>
 		</div>
   
-		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
+		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">About</a>
 		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">Marketplace</a>
   
 		<div x-data="{ open: false }" class="relative">
