--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -175,10 +175,10 @@ const solutions = [
 					<div class="feature-box-icon d-inline-block position-relative">
 						<img src="/assets/images/eye.svg">
 					</div>
-					<h3 class="feature-box-title mt-3">Insightful Analytics</h3>
-					<p class="feature-box-text mt-3"> We provide comprehensive analytics and reports, giving you valuable insights for data-driven decision making.</p>
+					<h3 class="feature-box-title mt-3">{solution.title}</h3>
+					<p class="feature-box-text mt-3">{solution.description}</p>
 				</div>
-			</div>
+
 				))}
 		 </div>
 		 <!-- Features Section Start -->
