--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -102,7 +102,7 @@
 				</div>
 				<div class="flex-auto">
 				  <a href="#" class="block font-semibold text-gray-900">
-					Automations
+					E-commerce Automations
 					<span class="absolute inset-0"></span>
 				  </a>
 				  <p class="mt-1 text-gray-600">Build strategic funnels that will convert</p>
@@ -126,8 +126,8 @@
 		  </div>
 		</div>
   
-		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">About</a>
-		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">Marketplace</a>
+		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">Pricing</a>
+		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn</a>
   
 		<div x-data="{ open: false }" class="relative">
 		  <button @click="open = !open" type="button" class="flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900" aria-expanded="false">
@@ -148,11 +148,11 @@
 			  To: "opacity-0 translate-y-1"
 		  -->
 		  <div x-show="open" class="absolute -left-8 top-full z-10 mt-3 w-56 rounded-xl bg-white p-2 shadow-lg ring-1 ring-gray-900/5">
-			<a href="#" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">About us</a>
-			<a href="#" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">Careers</a>
-			<a href="#" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">Support</a>
-			<a href="#" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">Press</a>
-			<a href="#" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">Blog</a>
+			<a href="/about" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">About</a>
+			<a href="/careers" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">Careers</a>
+			<a href="/support" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">Support</a>
+			<a href="/press" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">Press</a>
+			<a href="/insights" class="block rounded-lg px-3 py-2 text-sm font-semibold leading-6 text-gray-900 hover:bg-gray-50">Blog / Insights</a>
 		  </div>
 		</div>
 	  </div>
@@ -222,10 +222,10 @@
 				</button>
 				<!-- 'Company' sub-menu, show/hide based on menu state. -->
 				<div x-data="hide" class="mt-2 space-y-2" id="disclosure-2">
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">About us</a>
+				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">About</a>
 				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Careers</a>
 				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Support</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Press</a>
+				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Open Source Projects</a>
 				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Blog</a>
 				</div>
 			  </div>
