--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,6 @@
+---
+
+---
 <footer class="mt-32 sm:mt-40" aria-labelledby="footer-heading">
 	<h2 id="footer-heading" class="sr-only">Footer</h2>
 	<div class="mx-auto max-w-7xl px-6 pb-8 lg:px-8">
@@ -79,7 +82,7 @@
 		<div class="mt-10 xl:mt-0">
 		  <h3 class="text-sm font-semibold leading-6 text-gray-900">Subscribe to our newsletter</h3>
 		  <p class="mt-2 text-sm leading-6 text-gray-600">The latest news, articles, and resources, sent to your inbox weekly.</p>
-		  <form class="mt-6 sm:flex sm:max-w-md">
+		  <form action="POST" class="mt-6 sm:flex sm:max-w-md">
 			<label for="email-address" class="sr-only">Email address</label>
 			<input type="email" name="email-address" id="email-address" autocomplete="email" required class="w-full min-w-0 appearance-none rounded-md border-0 bg-white px-3 py-1.5 text-base text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:w-64 sm:text-sm sm:leading-6 xl:w-full" placeholder="Enter your email">
 			<div class="mt-4 sm:ml-4 sm:mt-0 sm:flex-shrink-0">
