New comp added from shortcut

--- a/src/components/Logos.astro
+++ b/src/components/Logos.astro
@@ -10,13 +10,13 @@ const logos = [
 ]
 ---
 
-<section class="brand-logos  section position-relative mx-auto ">
+<section class=" position-relative mx-auto ">
     <div class="  px-3">
        <div class="row">
           <div class="col">
-             <div class="brand-logos-box text-center">
+             <div class="brand-logos-box  text-center">
                 <span class="pre-title small fw-bold text-uppercase">Clients</span>
-                <h3 class="brand-logos-title text-center  w-full h3 fw-bold mt-2">Proudly Serving Professionals Across Diverse Industries Since 2006</h3>
+                <h3 class="brand-logos-title  text-center text-4xl w-full h3 fw-bold mt-2">Proudly Serving Professionals Across Diverse Industries Since 2006</h3>
                 <div class=" justify-center w-full flex mt-4 pt-4">
                 
                 </div>
