--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,6 +52,17 @@ const solutions = [
         "targetAudience": "Enterprises, Government Entities"
     }
 ]
+
+const featured = [
+	{
+		title: "Tecplus, Digital Agency with a personal touch",
+		category: "News",
+		excerpt: "Tecplus is a digital agency that specializes in building high-performance, scalable web applications and mobile apps. We leverage modern technologies like React, Next.js, and React Native to deliver robust, user-friendly digital experiences.",
+		image: "/assets/images/tecplus.png",
+		date: "2021-08-01",
+	},
+	
+]
 ---
 
 <!DOCTYPE html>
@@ -89,12 +100,12 @@ const solutions = [
 		<!-- Navigation Menu Start -->
 		<Header />
 		 <!-- Navigation Menu End -->
-		 <div class="bg-white pb-24">
+		 <div class="bg-white pb-12">
 			<div class="relative isolate overflow-hidden bg-gradient-to-b from-indigo-100/20">
-			  <div class="mx-auto max-w-7xl pb-24 pt-10  lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-8 ">
+			  <div class="mx-auto max-w-8xl pb-24 pt-10  lg:grid lg:grid-cols-2 lg:gap-x-8 lg:px-8 ">
 				<div class="px-6 lg:px-0 lg:pt-4">
 				  <div class="mx-auto max-w-2xl">
-					<div class="max-w-lg">
+					<div class="max-w-2xl">
 
 					  <div class="mt-24 sm:mt-32 lg:mt-16">
 						<a href="#" class="inline-flex space-x-6">
@@ -107,7 +118,7 @@ const solutions = [
 						  </span>
 						</a>
 					  </div>
-					  <h1 class="mt-10 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Transforming Visions into Powerful Realities</h1>
+					  <h1 class="mt-10 text-5xl font-bold tracking-tight text-gray-900 sm:text-6xl">Transforming <span class="gradient-1">Visions</span> into Powerful <span class="gradient-2">Realities</span></h1>
 					  <p class="mt-6 text-lg leading-8 text-gray-600">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
 					  <div class="mt-10 flex items-center gap-x-6">
 						<a href="#" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Documentation</a>
@@ -119,7 +130,7 @@ const solutions = [
 				<div class="mt-20  md:mx-auto md:max-w-2xl lg:mx-0 lg:mt-0 lg:w-screen">
 				  <div class="absolute inset-y-0 right-1/2 -z-10 -mr-10 w-[200%] skew-x-[-30deg] bg-white shadow-xl shadow-indigo-600/10 ring-1 ring-indigo-50 md:-mr-20 lg:-mr-36" aria-hidden="true"></div>
 				  <div class="">
-					<lottie-player src="https://assets9.lottiefiles.com/packages/lf20_myejiggj.json"  background="transparent"  speed="0.5"  style="width: 500px; height: 500px;"  loop  autoplay></lottie-player>
+					<lottie-player src="https://assets9.lottiefiles.com/packages/lf20_myejiggj.json"  background="transparent"  speed="0.5"  style="width: 700px; height: 700px;"  loop  autoplay></lottie-player>
 				  </div>
 				</div>
 			  </div>
@@ -136,7 +147,7 @@ const solutions = [
 		 <!-- Brand Logos End -->
 		 <!-- About Section Start -->
 		 <section class="video-section section">
-			<div class="container max-w-7xl px-3">
+			<div class="container max-w-8xl px-3">
 			   <div class="">
 				  <div class="grid grid-cols-2 ">
 					<div class="col-12 col-lg-6 mt-5 mt-lg-0">
@@ -168,7 +179,7 @@ const solutions = [
 		 </section>
 		 
 		 <!-- About Section End -->
-		 <div class="grid grid-cols-4 mx-auto max-w-7xl pb-24 pt-10 lg:gap-x-8 lg:px-8 ">
+		 <div class="grid grid-cols-4 mx-auto max-w-8xl pb-24 pt-10 lg:gap-x-8 lg:px-8 ">
 			{solutions.map((solution) => (
 
 				<div class="feature-box mt-4 mt-lg-5">
@@ -384,7 +395,7 @@ const solutions = [
 		 <!-- Testimonials End -->
 		 <!-- Blog Posts Start -->
 		 <section class="blog-posts  section">
-			<div class="container max-w-7xl px-3">
+			<div class="container max-w-8xl px-3">
 			<div class="row">
 			   <div class="col">
 				  <div class="section-head text-center w-small mx-auto">
@@ -396,31 +407,34 @@ const solutions = [
 			</div>
 			<div class="row">
 			  <!-- Blog Post 1 Start-->
-			   <div class="col-12 col-md-4 col-lg-4">
-				  <div class="blog-post-box mt-4 mt-lg-5">
-					 <div class="card border">
-						<img class="blog-thumb card-img-top" src="/assets/images/blog-1.jpg">
-						<div class="card-body p-3 p-lg-4">
-						   <div class="blog-cat">
-							  <a href="#" class="fw-bold text-uppercase small">SEO</a>
-						   </div>
-						   <h3 class="card-title fw-bold fs-5 mt-2 mb-0">How to fix your local SEO strategy to increase leads?</h3>
-						   <p class="card-text mt-2">Lorem ipsum dolor sit amet, consectetur elit. Nulla hendrerit eu velit pellentesque accuan.</p>
-						</div>
-						<div class="card-footer px-3 px-lg-4 bg-white">
-						   <div class="blog-meta d-flex align-items-center justify-content-between small">
-							  <div class="blog-author small">
-								 <img class="rounded-circle me-1" src="/assets/images/author.jpg">
-								 <span><a href="#" class="text-reset">Jamie Watson</a></span>
+			  {featured.map((post) => (
+
+				  <div class="col-12 col-md-4 col-lg-4">
+					 <div class="blog-post-box mt-4 mt-lg-5">
+						<div class="card border">
+						   <img class="blog-thumb card-img-top" src="/assets/images/blog-1.jpg">
+						   <div class="card-body p-3 p-lg-4">
+							  <div class="blog-cat">
+								 <a href="#" class="fw-bold text-uppercase small">{post.category}</a>
 							  </div>
-							  <div class="blog-date">
-								 <span>6 hrs ago</span>
+							  <h3 class="card-title fw-bold fs-5 mt-2 mb-0">{post.title}</h3>
+							  <p class="card-text mt-2">{post.excerpt}</p>
+						   </div>
+						   <div class="card-footer px-3 px-lg-4 bg-white">
+							  <div class="blog-meta d-flex align-items-center justify-content-between small">
+								 <div class="blog-author small">
+									<img class="rounded-circle me-1" src="/assets/images/author.jpg">
+									<span><a href="#" class="text-reset">Jamie Watson</a></span>
+								 </div>
+								 <div class="blog-date">
+									<span>{post.date}</span>
+								 </div>
 							  </div>
 						   </div>
 						</div>
 					 </div>
 				  </div>
-			   </div>
+			  ))}
 			   <!-- Blog Post 1 End-->
 			   <!-- Blog Post 2 Start-->
 			   <div class="col-12 col-md-4 col-lg-4">
@@ -484,7 +498,7 @@ const solutions = [
 		 <!-- Team Section End -->
 		 <!-- CTA Section Start -->
 		 <section class="cta section">
-			<div class="container max-w-7xl px-3">
+			<div class="container max-w-8xl px-3">
 			   <div class="row">
 				  <div class="col">
 					 <div class="cta-box text-center">
