New comp added from shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -101,7 +101,7 @@
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="#" class="block font-semibold text-gray-900">
+				  <a href="/automations" class="block font-semibold text-gray-900">
 					E-commerce Automations
 					<span class="absolute inset-0"></span>
 				  </a>
@@ -126,8 +126,8 @@
 		  </div>
 		</div>
   
-		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">Pricing</a>
-		<a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn</a>
+		<a href="/pricing" class="text-sm font-semibold leading-6 text-gray-900">Pricing</a>
+		<a href="/learn" class="text-sm font-semibold leading-6 text-gray-900">Learn</a>
   
 		<div x-data="{ open: false }" class="relative">
 		  <button @click="open = !open" type="button" class="flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900" aria-expanded="false">
@@ -196,12 +196,12 @@
 				<!-- 'Product' sub-menu, show/hide based on menu state. -->
 				<div class="mt-2 space-y-2" id="disclosure-1">
 				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Analytics</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Engagement</a>
+				  <a href="/engagement" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Engagement</a>
 				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Security</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Integrations</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Automations</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Watch demo</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Contact sales</a>
+				  <a href="/integrations" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Integrations</a>
+				  <a href="/automations" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Automations</a>
+				  <a href="/demo" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Watch demo</a>
+				  <a href="/contact" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Contact sales</a>
 				</div>
 			  </div>
   
@@ -222,16 +222,16 @@
 				</button>
 				<!-- 'Company' sub-menu, show/hide based on menu state. -->
 				<div x-data="hide" class="mt-2 space-y-2" id="disclosure-2">
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">About</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Careers</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Support</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Open Source Projects</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Blog</a>
+				  <a href="/about" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">About</a>
+				  <a href="/careers" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Careers</a>
+				  <a href="/support" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Support</a>
+				  <a href="/oss" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Open Source Projects</a>
+				  <a href="/blog" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Blog</a>
 				</div>
 			  </div>
 			</div>
 			<div class="py-6">
-			  <a href="#" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Log in</a>
+			  <a href="/studio" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Log in</a>
 			</div>
 		  </div>
 		</div>
