New comp added from shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -87,7 +87,7 @@
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="#" class="block font-semibold text-gray-900">
+				  <a href="/staffing" class="block font-semibold text-gray-900">
 					Staffing
 					<span class="absolute inset-0"></span>
 				  </a>
@@ -197,7 +197,7 @@
 				<div class="mt-2 space-y-2" id="disclosure-1">
 				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Analytics</a>
 				  <a href="/engagement" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Engagement</a>
-				  <a href="#" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Security</a>
+				  <a href="/security" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Security</a>
 				  <a href="/integrations" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Integrations</a>
 				  <a href="/automations" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Automations</a>
 				  <a href="/demo" class="block rounded-lg py-2 pl-6 pr-3 text-sm font-semibold leading-7 text-gray-900 hover:bg-gray-50">Watch demo</a>
