New comp added from shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -128,6 +128,7 @@
   
 		<a href="/pricing" class="text-sm font-semibold leading-6 text-gray-900">Pricing</a>
 		<a href="/learn" class="text-sm font-semibold leading-6 text-gray-900">Learn</a>
+		<a href="/blog" class="text-sm font-semibold leading-6 text-gray-900">Blog</a>
   
 		<div x-data="{ open: false }" class="relative">
 		  <button @click="open = !open" type="button" class="flex items-center gap-x-1 text-sm font-semibold leading-6 text-gray-900" aria-expanded="false">
