New comp added from shortcut

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,7 +59,7 @@
 				  </svg>
 				</div>
 				<div class="flex-auto">
-				  <a href="#" class="block font-semibold text-gray-900">
+				  <a href="/ux-ui" class="block font-semibold text-gray-900">
 					UX/UI Design
 					<span class="absolute inset-0"></span>
 				  </a>
